Fixed bug #940 Fixed alignment of 'Add A Subject Manually' light box :Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -175,3 +175,8 @@ span.error_arrow,#questionnaire-code-error, label.error_arrow{
 #questionnaire_preview li{
     width:500px;
 }
+
+.add_subject_form ul li label.error {
+    margin-right: 118px;
+    width: 100px
+}
